# rust_grpc_microservices

./: Cargo.toml  README.md  build.rs
proto/: microservices.proto
src/: microservice1.rs  microservice2.rs  server.rs
