[package]
name = "rust_grpc"
version = "0.1.0"
authors = ["jga"]
edition = "2021"

[[bin]]
name = "ms-server"
path = "src/server.rs"

[[bin]]
name = "msname-client"
path = "src/microservice1.rs"

[[bin]]
name = "mssurname-client"
path = "src/microservice2.rs"

[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.7.2"